# entrouter-line

./: BENCHMARK-RESULTS.md  Cargo.toml  README.md  config.example.toml
.github/: copilot-instructions.md
deploy/: bench_mtu.py  bench_ratelimit.py  bench_throughput.py  coord_bench.py  forwarder_patched.rs  lon-config.toml  netem_bench.py  patch_deliver.py  simple_test.py  smoke_lon.py  smoke_syd.py  syd-config.toml  sync_bench.py
src/: admin.rs  config.rs  lib.rs  main.rs
src/edge/: mod.rs  quic_acceptor.rs  tcp_split.rs
src/mesh/: latency_matrix.rs  mod.rs  probe.rs  router.rs
src/relay/: fec.rs  fec_codec.rs  forwarder.rs  mod.rs  tunnel.rs
