[package]
name = "entrouter-line"
version = "0.1.0"
edition = "2024"
description = "Zero-loss cross-region packet relay network"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
reed-solomon-erasure = "6.0"
chacha20poly1305 = "0.10"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
socket2 = { version = "0.5", features = ["all"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
