[package]
name = "entrouter-line"
version = "0.1.0"
edition = "2024"
description = "Zero-loss cross-region packet relay network"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
reed-solomon-erasure = "6.0"
chacha20poly1305 = "0.10"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
getrandom = "0.2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
axum = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
base64 = "0.22"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "lossy-proxy"
path = "src/bin/lossy_proxy.rs"

[[bin]]
name = "test-harness"
path = "src/bin/test_harness.rs"

[[bench]]
name = "relay_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
